// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IotUnit Должно корректно отрендериться величина в Паскалях 1`] = `
<Fragment>
  Па
</Fragment>
`;

exports[`IotUnit Должно корректно отрендериться величина в амперах 1`] = `
<Fragment>
  А
</Fragment>
`;

exports[`IotUnit Должно корректно отрендериться величина в атмосферах 1`] = `
<Fragment>
  атм
</Fragment>
`;

exports[`IotUnit Должно корректно отрендериться величина в барах 1`] = `
<Fragment>
  бар
</Fragment>
`;

exports[`IotUnit Должно корректно отрендериться величина в ваттах 1`] = `
<Fragment>
  Вт
</Fragment>
`;

exports[`IotUnit Должно корректно отрендериться величина в вольтах 1`] = `
<Fragment>
  В
</Fragment>
`;

exports[`IotUnit Должно корректно отрендериться величина в градусах Цельсия 1`] = `
<Fragment>
  °C
</Fragment>
`;

exports[`IotUnit Должно корректно отрендериться величина в кельвинах 1`] = `
<Fragment>
  К
</Fragment>
`;

exports[`IotUnit Должно корректно отрендериться величина в люксах 1`] = `
<Fragment>
  лк
</Fragment>
`;

exports[`IotUnit Должно корректно отрендериться величина в мг/м3 1`] = `
<Fragment>
  мг/м³
</Fragment>
`;

exports[`IotUnit Должно корректно отрендериться величина в миллиметрах ртутного столба 1`] = `
<Fragment>
  мм рт. ст.
</Fragment>
`;

exports[`IotUnit Должно корректно отрендериться величина в мкг/м3 1`] = `
<Fragment>
  мкг/м³
</Fragment>
`;

exports[`IotUnit Должно корректно отрендериться величина в процентах 1`] = `
<Fragment>
  %
</Fragment>
`;

exports[`IotUnit Должно корректно отрендериться величина на миллион 1`] = `
<Fragment>
  PPM
</Fragment>
`;
